[package]
name = "EnderCliTools"
version = "1.2.0"
edition = "2024"
authors = ["Endkind <endkind.ender@gmail.com>"]
license = "MIT"
description = "A collection of CLI utilities that enhance and streamline everyday terminal workflows."
repository = "https://github.com/Endkind/EnderCliTools"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
comfy-table = { version = "7.1.4" }
anyhow = { version = "1.0.99" }
atty = { version = "0.2.14" }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.5" }
directories = { version = "6.0.0" }
regex = { version = "1.11.1" }
semver = { version = "1.0.23" }
sha2 = { version = "0.10.8" }
zip = { version = "2.2.0" }
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"] }
serde_json = { version = "1.0.142" }

[package.metadata.wix]
eula = false

[package.metadata.deb]
maintainer = "Endkind <endkind.ender@gmail.com>"
copyright = "2025, Endkind"
license-file = ["LICENSE", "0"]
extended-description = "EnderCliTools is a lightweight collection of CLI utilities that make working in the terminal faster and more convenient."
section = "utils"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/EnderCliTools", "/usr/bin/enderclitools", "755"],
    ["debian-bin/ect", "/usr/bin/ect", "755"],
    ["debian-bin/dps", "/usr/bin/dps", "755"],
    ["debian-bin/dcps", "/usr/bin/dcps", "755"],
]
